# LegoSpikeRust

./: .gitignore  00temp.txt  CONTRIBUTING.md  Cargo.toml  README.md  WORKFLOW.md  build-and-flash.sh  deploy_c_led.sh  deploy_pybricks_primehub_resilient.sh  deploy_rust_led.sh  dev.sh  hub_human_in_loop.sh  hub_smoke_test.py  instructions.md  rust-toolchain.toml  upload.py
bootloader/: Cargo.toml  memory.x
bootloader/src/: main.rs
hub-motors/: Cargo.toml  Embed.toml  memory.x
hub-motors/.cargo/: config.toml
hub-motors/src/: main.rs  main_bare.rs
led-test/: Cargo.toml  memory.x
led-test/src/: main.rs
monitor/: Cargo.toml  memory.x
monitor/src/: main.rs
motor-test/: Cargo.toml  memory.x
motor-test/src/: main.rs
resources/: hub-cheatsheet.drawio
spike-rt-sim/: Cargo.toml  build.rs
spike-rt-sim/csrc/: glue_sim.c  pbdrvconfig.h  pbio_os_config.h  pbioconfig.h  pbsysconfig.h  platform_sim.c
spike-rt-sim/src/: ffi.rs  main.rs
