[workspace]
resolver = "2"

members = [
  "hub-motors",
  "bootloader",
  "monitor",
  "led-test",
  "motor-test",
]

exclude = [
  # spike-rt has its own build system (compiles pbio C library)
  "spike-rt",
  # spike-rt-sim compiles pbio for native Linux simulation
  "spike-rt-sim",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
