[package]
name = "hub-motors"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", features = ["cortex-m-systick"] }
stm32f4 = { version = "0.15", features = ["stm32f413", "rt"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
synopsys-usb-otg = { version = "0.4", features = ["fs", "cortex-m"] }
usb-device = "0.3"
usbd-serial = "0.2"

[profile.dev]
opt-level = "s"
panic = "abort"
debug = 2

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
debug = 2        # keep debug info for probe-rs + defmt
