[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
synopsys-usb-otg = { version = "0.4", features = ["fs", "cortex-m"] }
usb-device = "0.3"
usbd-serial = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = false
